# Flighter

./: .gitignore  CMakeLists.txt  HAUC  README.md  UserConfig.txt  update_remote_tx2.expect
data/: voc.data  voc.names
device/device_controller/: device_controller.ino
src/cmake/: ApplicationCmake.cmake  BoostCmake.cmake  DarkNetCmake.cmake  FlightCVCmake.cmake  GlobalEnvCmake.cmake  OpencvCmake.cmake  UnitTestCMake.cmake
src/darknet/: CMakeLists.txt
src/darknet/include/: darknet.h
src/headers/application/: main.h
src/headers/flightcv/: flightcv.h
src/headers/serial/: flight_serial.h
src/sources/application/: main.cpp
src/sources/flightcv/: flightcv.cpp
src/sources/serial/: flight_serial.cpp
src/sources/unit_test/: fl_cv_test.cpp  fl_darknet_test.cpp  fl_flight_control_test.cpp  fl_rs_camera_test.cpp
