cmake_minimum_required(VERSION 3.0)
project(Flighter)
set(CMAKE_CXX_STANDARD 11)

include(${PROJECT_SOURCE_DIR}/src/cmake/GlobalEnvCmake.cmake)
include(${PROJECT_SOURCE_DIR}/src/cmake/OpenGLCmake.cmake)
add_subdirectory(${PROJECT_SOURCE_DIR}/3rdparty/googletest)
#add_subdirectory(${PROJECT_SOURCE_DIR}/3rdparty/librealsense-2.16.3)
link_directories(${PROJECT_SOURCE_DIR}/3rdparty/librealsense)
link_directories(${PROJECT_SOURCE_DIR}/3rdparty/darknet)
include(${PROJECT_SOURCE_DIR}/src/cmake/BoostCmake.cmake)
include(${PROJECT_SOURCE_DIR}/src/cmake/OpencvCmake.cmake)
#add_subdirectory(${PROJECT_SOURCE_DIR}/3rdparty/darknet)
#include(${PROJECT_SOURCE_DIR}/src/cmake/DarkNetCmake.cmake)
add_subdirectory(${PROJECT_SOURCE_DIR}/3rdparty/Onboard-SDK)
include(${PROJECT_SOURCE_DIR}/src/cmake/FlightCVCmake.cmake)

include(${PROJECT_SOURCE_DIR}/src/cmake/ApplicationCmake.cmake)
include(${PROJECT_SOURCE_DIR}/src/cmake/UnitTestCMake.cmake)
